Fix warnings on tests